style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,900;1,300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;900&display=swap');

/* * {
    outline: solid red 4px;
} */
    

body {
    margin: 0;
    font-family: 'Cairo', 'Roboto', sans-serif;
    display: flex;
    flex-direction: column;
    gap: 0;
    flex-wrap: wrap;
}

button {
    width: 120px;
    height: 30px;
    background-color: #6f58c9ff;
    color: #F9FAF8;
    font-family: 'Cairo', 'Roboto', sans-serif;
    font-size: 16px;
    font-weight: 800;
    border-radius: 8px;
    border: 0;
    padding: 6px 16px;
    display: flex;
    align-items: center;
    justify-content: center;
}

button:hover {
    cursor: pointer;
    background-color: aliceblue;
    color: black;
}

button:active {
    transform: translateX(2px);
    transform: translateY(1px);
    box-shadow: 0 4px gray;
}

a {
    text-decoration: none;
}


/* HERO SECTION */

.logo {
    max-width: 280px;
    height: 98px;
}

.top {
    padding: 0 200px 150px;
    background-color: #000000;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.top-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 72px;
    
}

.links {
    display: flex;
    gap: 50px;
    align-self: flex-start;   
}

.header-link {
    color: #E5E7EB;
    font-size: 24px; 
}

.header-link:hover {
    cursor: pointer;
    background-color: #161d27;
    border-radius: 60%;
}

.hero-and-image-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 40px;


}

.hero-text {
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

.top-left-section {
    display: flex;
    flex-direction: column;
}

.hero-subtext-1,
.hero-subtext-2 {
    max-width: 580px;
    font-size: 24px;
    color: #E5E7EB;
}

.hero-subtext-1 {
    /* text-align: end; */
    margin-bottom: 0px;
    /* margin-left: 32px; */
  }

.hero-subtext-2 {
  /* text-align: end; */
  margin-top: 0;
  /* margin-left: 32px; */
}

.hero-video {
    max-width: 1000px;
    height: 600px;
    border-radius: 50%;
    border-bottom: solid #76e7cdff;
    border-bottom-width: 20px;
}

.hero-button-container {
    display: flex;
    justify-content: flex-end;
    
}

.hero-button {
    width: 320px;
    height: 150px;
    font-size: 35px;
    border-radius: 50%;
    background-color: #7e78d2ff;
    margin-bottom: 3%;
}

.hero-button:hover {
    cursor: pointer;
    background-color: #76e7cdff;
    color: black;
    border-bottom: 4px solid aliceblue;
}



/* INFO SECTION */

.middle {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    background-color: black;
}

.founder-with-information-container {
   display: flex;
   justify-content: center;
   background-color: aliceblue;
   width: 100%;
   padding: 50px;
   padding-bottom: 0;
}

.founder-image {
    max-width: 800px;
    height: 800px;
}

.signature {
    max-width: 600px;
    height: 200px;
}


.info-container {
    padding: 0 0 50px 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    align-self: flex-end;
    
}

.mid-title {
    padding: 16px;
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
}

.ill-with-text {
    display: flex;
    gap: 48px;
}

.ill-and-subtext {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 16px;
}

.illustration {
    max-width: 150px;
    height: 150px;
    /* border: 4px solid #3882F6; */
    border-radius: 10%;
}

.ill-subtext {
    font-size: 18px;
    max-width: 180px;
    font-weight: 400;
    text-align: center;
    margin: 0;
}


/* QUOTE SECTION */

.quote-and-clouds {
    display: flex;
    background-color: #5f45c4;
    width: 100%;
}

.quote-main {
    display: flex;
    flex-direction: column;
    padding: 150px;
    justify-content: center;    
    align-items: flex-start;
    width: 100%;
}

.quote-container {
    display: flex;
    flex-direction: column;
    gap: 80px;
    padding-left: 50px;   
}

.clouds {
    max-width: 1200px;
    height: 1000px;
}

.quote {
    font-style: italic;
    font-weight: 300;
    font-size: 38px;
    color: aliceblue;
    max-width: 800px;
    max-height: 800px;
    margin: 0; 
}

.quote-author {
    margin: 0;
    font-size: 30px;
    color: aliceblue;

}


/* SIGNUP CALL SECTION */

.cta-meta-container {
    background-color: black;
    max-width: 100%;
    display: flex;
    justify-content: center;
    align-self: center;
    width: 100%;
}

.call-to-action-container {
    background-color: #6f58c9ff;
    color: #F9FAF8;
    padding: 40px;
    border-radius: 50px;
    display: flex;
    margin: 30px;
    justify-content: space-between;
    align-items: center;
    gap: 150px;
    font-size: 20px;
}

.non-button-text-container {
    display: flex;
    flex-direction: column;
    flex: 1;
    gap: 16px;
}

.final-title,
.final-subtext {
    margin: 0;
}

.final-button {
    border: 2px solid aliceblue;
    border-radius: 50%;
    background-color: #7e78d2ff;
    width: 200px;
    height: 100px;
    font-size: 24px;
    
}

/* FOOTER */

footer {
    background-color: #5f45c4;
    color: #F9FAF8;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 32px;
 }
 

